<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="24dp">

    <RelativeLayout
        android:id="@+id/card_"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/card_"
        android:clipToOutline="true"
        android:elevation="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/rectangle_9"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/rectangle_9" />

        <RelativeLayout
            android:id="@+id/frame_104"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginRight="16dp">

            <RelativeLayout
                android:id="@+id/frame_13"
                android:layout_width="match_parent"
                android:layout_height="28dp">

                <RelativeLayout
                    android:id="@+id/iconly_bold_plus"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@+id/plus"
                        android:layout_width="23.33dp"
                        android:layout_height="23.33dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="2.33dp"
                        android:layout_marginTop="2.33dp"
                        android:src="@drawable/ic_list_icon" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="197dp"
                    android:layout_height="20dp"
                    android:layout_alignBaseline="@id/iconly_bold_plus"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/iconly_bold_plus"
                    android:fontFamily="@font/sfprodisplayregular"
                    android:gravity="top"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/tap_plus_to"
                    android:textAppearance="@style/tap_plus_to"
                    android:translationY="-0.45sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/frame_15"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="52dp">

                <View
                    android:id="@+id/vector_2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/vector_2" />

                <RelativeLayout
                    android:id="@+id/frame_14"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="75dp"
                        android:layout_height="20dp"
                        android:fontFamily="@font/sfprodisplayregular"
                        android:gravity="top"
                        android:lineSpacingExtra="6sp"
                        android:text="@string/add_your_ta"
                        android:textAppearance="@style/add_your_ta"
                        android:translationY="-2.84sp" />

                    <TextView
                        android:id="@+id/day"
                        android:layout_width="165dp"
                        android:layout_height="20dp"
                        android:layout_alignBaseline="@id/time"
                        android:layout_marginStart="90dp"
                        android:layout_toEndOf="@id/time"
                        android:fontFamily="@font/sfprodisplayregular"
                        android:gravity="top"
                        android:lineSpacingExtra="6sp"
                        android:text="@string/today_mon_2"
                        android:textAppearance="@style/today_mon_2"
                        android:translationY="-2.84sp" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>