<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".HomePageActivity">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="68dp"
        android:layout_marginRight="24dp">
        <RelativeLayout
            android:id="@+id/create_task"
            android:layout_width="209dp"
            android:layout_height="57dp"
            >
            <TextView
                android:id="@+id/today"
                android:layout_width="64dp"
                android:layout_height="29dp"
                android:text="@string/today"
                android:fontFamily="@font/sfprodisplayregular"
                android:textAppearance="@style/today"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/best_platfo"
                android:layout_width="209dp"
                android:layout_height="20dp"
                android:text="@string/best_platfo"
                android:fontFamily="@font/sfprodisplayregular"
                android:textAppearance="@style/best_platfo"
                android:lineSpacingExtra="3sp"
                android:translationY="-1.65sp"
                android:gravity="top"
                android:layout_below="@id/today"
                android:layout_marginTop="8dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/iconly_bold_setting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
            <ImageView
                android:id="@+id/setting"
                android:layout_width="19dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="2.5dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_setting_icon"
                />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/card_"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="155dp"
        android:clipToOutline="true"
        android:background="@drawable/card_"
        android:elevation="40dp">
        <View
            android:id="@+id/rectangle_9"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/rectangle_9"
        />
        <RelativeLayout
            android:id="@+id/frame_104"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="52dp"
            android:layout_marginRight="16dp">
            <RelativeLayout
                android:id="@+id/frame_13"
                android:layout_width="match_parent"
                android:layout_height="28dp">
                <RelativeLayout
                    android:id="@+id/iconly_bold_plus"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true">
                    <ImageView
                        android:id="@+id/plus"
                        android:layout_width="23.33dp"
                        android:layout_height="23.33dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="2.33dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="2.33dp"
                        android:src="@drawable/ic_plus_icon"
                        />
                </RelativeLayout>
                <TextView
                    android:id="@+id/tap_plus_to"
                    android:layout_width="197dp"
                    android:layout_height="20dp"
                    android:gravity="top"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/tap_plus_to"
                    android:fontFamily="@font/sfprodisplayregular"
                    android:textAppearance="@style/tap_plus_to"
                    android:layout_alignBaseline="@id/iconly_bold_plus"
                    android:layout_toEndOf="@id/iconly_bold_plus"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:translationY="-0.45sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/frame_15"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="52dp">
                <View
                    android:id="@+id/vector_2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/vector_2"
                    />
                <RelativeLayout
                    android:id="@+id/frame_14"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="8dp">
                    <TextView
                        android:id="@+id/add_your_ta"
                        android:layout_width="75dp"
                        android:layout_height="20dp"
                        android:text="@string/add_your_ta"
                        android:textAppearance="@style/add_your_ta"
                        android:fontFamily="@font/sfprodisplayregular"
                        android:lineSpacingExtra="6sp"
                        android:translationY="-2.84sp"
                        android:gravity="top"
                        />
                    <TextView
                        android:id="@+id/today_mon_2"
                        android:layout_width="165dp"
                        android:layout_height="20dp"
                        android:text="@string/today_mon_2"
                        android:textAppearance="@style/today_mon_2"
                        android:fontFamily="@font/sfprodisplayregular"
                        android:layout_alignBaseline="@id/add_your_ta"
                        android:layout_toEndOf="@id/add_your_ta"
                        android:layout_marginStart="90dp"
                        android:lineSpacingExtra="6sp"
                        android:translationY="-2.84sp"
                        android:gravity="top"
                        />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_13980"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#F2F9F9"
        android:clipToOutline="true"
        android:elevation="80dp">
        <View
            android:id="@+id/rectangle_4"
            android:layout_width="28dp"
            android:layout_height="3dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="46dp"
            android:background="#24A19C" />
        <LinearLayout
            android:id="@+id/frame_50"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="22dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/iconly_bold_home"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/home"
                    android:layout_width="19dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_home_icon"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/iconly_bold_inbox"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/inbox"
                    android:layout_width="19dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_inbox_icon" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/iconly_bold_calendar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/calendar"
                    android:layout_width="19dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_celendar_icon" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/iconly_bold_category"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/category"
                    android:layout_width="19dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_category_icon" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/icon_bold_paper_plus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/paper"
                    android:layout_width="19dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_paper_icon" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>